Bug Fix for Featured Courses - remove scrollbar

--- a/theme/mypd/scss/_core.scss
+++ b/theme/mypd/scss/_core.scss
@@ -3518,7 +3518,7 @@ table th img.iconhelp {
     position: absolute;
     bottom: 0;
     padding: 0px 4px 40px 0px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 // Scrolling gradebook fixes
